# evalhub

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: baseline.md  cmds.md  history.md  tutorial.md
evalhub/: __init__.py  cli.py  gen.py  view.py
evalhub/benchmarks/: __init__.py  base.py  config.py  registry.py
evalhub/benchmarks/alignment/: __init__.py
evalhub/benchmarks/alignment/ifeval/: __init__.py  pack.py
evalhub/benchmarks/alignment/writingbench/: __init__.py  pack.py
evalhub/benchmarks/code/: __init__.py  base.py  utils.py
evalhub/benchmarks/code/bigcodebench/: __init__.py  sanitize.py
evalhub/benchmarks/code/humaneval/: __init__.py  sanitize.py  summary.py
evalhub/benchmarks/code/livecodebench/: __init__.py  code_generation.py  compute_code_generation_metrics.py  pass_k_utils.py  testing_util.py
evalhub/benchmarks/general/: __init__.py
evalhub/benchmarks/general/ceval/: __init__.py
evalhub/benchmarks/general/gpqa/: __init__.py
evalhub/benchmarks/general/mmlu_redux/: __init__.py
evalhub/benchmarks/math/: __init__.py  base.py  utils.py
evalhub/benchmarks/math/aime2024/: __init__.py
evalhub/benchmarks/math/aime2025/: __init__.py
evalhub/benchmarks/math/autologi/: __init__.py
evalhub/benchmarks/math/gsm8k/: __init__.py  utils.py
evalhub/benchmarks/math/hendrycks_math/: __init__.py
evalhub/benchmarks/math/math500/: __init__.py  utils.py
evalhub/benchmarks/math/verifier/: __init__.py  dapo.py  rllm.py
evalhub/benchmarks/math/zebralogic/: __init__.py
evalhub/benchmarks/multilingual/: __init__.py
evalhub/benchmarks/multilingual/include/: __init__.py
evalhub/benchmarks/multilingual/mlogiqa/: __init__.py
evalhub/benchmarks/multilingual/mmmlu/: __init__.py
evalhub/benchmarks/multilingual/mt_aime2024/: __init__.py
evalhub/benchmarks/multilingual/polymath/: __init__.py  instruction.py
evalhub/callback/: base_callback.py  code_callback.py
evalhub/inference/: generator.py  multiturn.py  schemas.py
evalhub/tools/: base_tool.py  code_tool.py  gsm8k_tool.py  schemas.py
evalhub/tools/config/: code_tool_config.yaml  gsm8k_tool_config.yaml
evalhub/utils/: __init__.py  click.py  logger.py  metrics.py  typer.py
inspect/: aggregate.py  res_length.py  sanitize_and_save.py  view_multiturn.py  view_reward.py
scripts/: eval_code.sh  r1_recipe.sh  router.sh  serve.sh  view.py
src/: cli.py  gen.py  view.py
src/benchmarks/: __init__.py  base.py  config.py
src/benchmarks/code/: base.py  humaneval.py  utils.py
src/benchmarks/code/bigcodebench/: __init__.py  sanitize.py
src/benchmarks/code/humaneval/: __init__.py  sanitize.py
src/benchmarks/code/livecodebench/: __init__.py  code_generation.py  compute_code_generation_metrics.py  pass_k_utils.py  testing_util.py
src/benchmarks/code/livecodebench/benchmarks/: code_generation.py
src/benchmarks/code/livecodebench/evaluation/: compute_code_generation_metrics.py  compute_scores.py  pass_k_utils.py  testing_util.py  utils_execute.py
src/benchmarks/code/livecodebench/utils/: path_utils.py
src/benchmarks/general/gpqa/: __init__.py
src/benchmarks/math/: base.py  utils.py
src/benchmarks/math/aime2024/: __init__.py
src/benchmarks/math/aime2025/: __init__.py
src/benchmarks/math/gsm8k/: __init__.py  utils.py
src/benchmarks/math/hendrycks_math/: __init__.py
src/benchmarks/math/math500/: __init__.py
src/inference/: generator.py  schemas.py  utils.py
src/utils/: logger.py  metrics.py  pbar.py
tests/math/: test_verifier.py
