[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalhub"
version = "0.1.0"
description = "All-in-one benchmarking platform for evaluating LLMs"
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "EvalHub Team", email = "ysy007@mail.ustc.edu.cn"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click",
    "requests",
    "pydantic",
    "rich",
    "tqdm",
    "openai",
    "datasets",
    "huggingface-hub",
    "hf_transfer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
]

[project.scripts]
evalhub = "src.cli:main"

[tool.setuptools]
packages = ["src"]
package-dir = {"src" = "src"}

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "C", "W"]
ignore = ["C901", "N818"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
